add 3D environment, objects, and GUI

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -152,7 +152,8 @@ grid-row-gap: 0px;
   position: relative;
   left: 10px;
   padding-right: 7px;
-  top: 50%;
+  padding-left: 8px;
+  top: 40%;
   transform: translate(0, -50%);
 }
 
