--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -32,12 +32,20 @@ grid-row-gap: 0px;
   width: 100vw;
   display: flex;
   color: white;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+h1,
+h2,
+h3 {
+  z-index: 9;
 }
 
 .headshot {
-  height: 200px;
-  width: auto;
-  border-radius: 50px;
+  height: auto;
+  width: 20vw;
+  border-radius: 20%;
   border: 2px solid white;
   display: flex;
   align-items: center;
@@ -128,10 +136,14 @@ grid-row-gap: 0px;
   overflow: hidden;
   overflow-y: hidden;
 }
+.wrapper {
+  box-shadow: 2px 2px 8px -3px rgba(0, 0, 0, 0.9);
+}
 
 .mouse-main {
-  height: 150px;
-  width: auto;
+  height: auto;
+  min-width: 120px;
+  max-width: 15vw;
   border-radius: 20px;
   display: flex;
   margin-top: 2px;
@@ -146,6 +158,7 @@ grid-row-gap: 0px;
   transform: translate(0, -50%);
   border: 3px solid var(--lblue);
   right: 0;
+  z-index: 4;
 }
 
 .mousecode {
@@ -159,6 +172,13 @@ grid-row-gap: 0px;
 
 .hi {
   font-size: 2.5rem;
+}
+
+.creative {
+  z-index: 9;
+  clear: bottom;
+  font-size: 1.1rem;
+  margin: 5px;
 }
 
 .div1 {
@@ -198,11 +218,6 @@ grid-row-gap: 0px;
   grid-area: 3 / 5 / 4 / 7;
   padding-bottom: 10px;
   padding-right: 5px;
-}
-
-.creative {
-  font-size: 1.1rem;
-  margin: 5px;
 }
 
 .div9 {
@@ -259,4 +274,36 @@ grid-row-gap: 0px;
   margin-top: 15px;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.scene-btn,
+.alt-btn {
+  font-size: 1.2rem;
+  border-radius: 10px;
+  color: orangered;
+  background-color: aliceblue;
+  position: fixed;
+  right: 20px;
+  font-weight: 600;
+  text-decoration: none;
+  box-shadow: 2px 2px 8px -3px rgba(0, 0, 0, 0.9);
+}
+
+.scene-btn:hover,
+.alt-btn:hover {
+  cursor: pointer;
+  opacity: 90%;
+}
+
+.scene-btn:active,
+.alt-btn:active {
+  transform: scale(0.95);
+}
+
+.scene-btn {
+  bottom: 30px;
+}
+
+.alt-btn {
+  bottom: 70px;
 }
