--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -314,3 +314,38 @@ h3 {
 .mouse-btn {
   bottom: 110px;
 }
+
+#bubble-wrapper {
+  height: 100%;
+  width: 100%;
+
+  position: fixed;
+  bottom: 0px;
+
+  overflow: hidden;
+  pointer-events: none;
+}
+
+.bubble {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+
+  width: max(300px, 30vw);
+  height: max(300px, 30vw);
+
+  background-color: rgb(33, 150, 243);
+  border-radius: 100%;
+
+  animation: wave 2s ease-in-out infinite;
+}
+
+@keyframes wave {
+  from,
+  to {
+    transform: translate(-50%, 0%);
+  }
+  50% {
+    transform: translate(-50%, -20%);
+  }
+}
